# CPP-Simple-Game

./: .gitignore  CMakeLists.txt
include/: RenderWindow.hpp
src/: RenderWindow.cpp  main.cpp
